--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -9,4 +9,6 @@ RUN	chmod 600 /etc/rsyncd.secrets
 COPY	rootfs/entrypoint.nu	/usr/bin/entrypoint
 COPY	rootfs/cron/rsync-client.nu	/etc/periodic/daily/rsync
 RUN	chmod +x /usr/bin/entrypoint /etc/periodic/daily/rsync
+EXPOSE	873
+VOLUME	/data
 ENTRYPOINT	["/usr/bin/entrypoint"]
