--- a/containers/rootfs/rsync/rsyncd.conf
+++ b/containers/rootfs/rsync/rsyncd.conf
@@ -7,7 +7,7 @@ timeout = 180
 transfer logging = yes
 log format = "%o %h [%a] %m (%u) %f %l"
 
-[data]
+[volume]
 path = /data
 auth users = container-user
 secrets file = /etc/rsyncd.secrets
