--- a/containers/rootfs/rsync/rsyncd.conf
+++ b/containers/rootfs/rsync/rsyncd.conf
@@ -4,11 +4,10 @@ read only = yes
 use chroot = true
 max connections = 20
 timeout = 180
-transfer logging = yes
 log format = "%o %h [%a] %m (%u) %f %l"
+strict modes = false
 
 [volume]
 path = /data
-auth users = container-user
+auth users = container
 secrets file = /etc/rsyncd.secrets
-strict modes = true
