--- a/containers/rootfs/rsync/rsyncd.conf
+++ b/containers/rootfs/rsync/rsyncd.conf
@@ -8,5 +8,5 @@ log format = "%o %h [%a] %m (%u) %f %l"
 
 [volume]
 path = /data
-auth users = container
+auth users = container-user
 secrets file = /etc/rsyncd.secrets
